# Linta

./: AGENTS.md  COMMERCIAL.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README_CN.md  ROADMAP.md  pyproject.toml
docs/: architecture.md  claude-desktop.md  codex-workflow.md  current-state-workflow.md  hermes-deployment.md  mini-kb.md  obsidian-tags.md  philosophy.md  quickstart.md  workflow.md
examples/product-knowledge-ops/ai_kb/export_for_ai/current/: core-knowledge-portal.md
examples/product-knowledge-ops/ai_kb/raw/weekly/: 2026-W17_knowledge-portal_weekly.md
examples/product-knowledge-ops/ai_kb/schema/: AGENTS.md
examples/product-knowledge-ops/ai_kb/wiki/projects/: core-knowledge-portal.md
hermes/: README.md  install_skills.sh
scripts/: validate_example.py
src/linta/: __init__.py  __main__.py  agent_access.py  claude_desktop.py  cli.py  config.py  doctor.py  export.py  hermes.py  indexes.py  init_kb.py  linting.py  maintenance.py  manifest.py  mcp_server.py  mini_kb.py  paths.py  prompts.py  raw_import.py  source_card.py  tags.py
src/linta/assets/hermes/skills/build_indexes/: SKILL.md  prompt.md
src/linta/assets/hermes/skills/confirm_current/: SKILL.md  prompt.md
src/linta/assets/hermes/skills/daily_maintenance/: SKILL.md  prompt.md
src/linta/assets/hermes/skills/export_for_ai/: prompt.md
src/linta/assets/hermes/skills/generate_mini_kb/: prompt.md
src/linta/assets/hermes/skills/import_uploaded_raw_source/: SKILL.md  prompt.md
src/linta/assets/hermes/skills/ingest_raw_source/: SKILL.md  prompt.md
src/linta/assets/hermes/skills/lint_knowledge_base/: SKILL.md  prompt.md
src/linta/assets/hermes/skills/manage_obsidian_tags/: SKILL.md  prompt.md
src/linta/utils/: __init__.py  dates.py  files.py  frontmatter.py  links.py  markdown.py
src/llm_wiki_kit/: __main__.py  hermes.py
src/llm_wiki_kit/assets/hermes/skills/confirm_current/: prompt.md
src/llm_wiki_kit/assets/hermes/skills/export_for_ai/: SKILL.md
src/llm_wiki_kit/assets/hermes/skills/generate_mini_kb/: SKILL.md
src/llm_wiki_kit/assets/hermes/skills/ingest_raw_source/: SKILL.md
src/llm_wiki_kit/assets/hermes/skills/lint_knowledge_base/: SKILL.md  prompt.md
templates/prompts/: confirm_current.md  export.md  tag.md
templates/root/: README.md
templates/schema/: AGENTS.md
tests/: test_init.py  test_phase2.py  test_phase3_content.py  test_phase4_hermes.py  test_phase5_polish.py  test_v024_raw_maintenance.py  test_v025_doctor.py  test_v02_tags_indexes.py  test_v030_agent_access.py  test_v034_claude_project_instructions.py
