[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-wiki-kit"
version = "0.1.0"
description = "Deterministic scaffolding and CLI helpers for LLM-compiled Markdown knowledge bases."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "llm-wiki-kit contributors" }
]
keywords = ["llm", "knowledge-base", "markdown", "wiki", "agents"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Documentation",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "rich>=13.0",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
llm-wiki = "llm_wiki_kit.cli:app"

[project.urls]
Homepage = "https://github.com/resment/LLM-Wiki-Kit"
Repository = "https://github.com/resment/LLM-Wiki-Kit"
Issues = "https://github.com/resment/LLM-Wiki-Kit/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
llm_wiki_kit = ["py.typed", "assets/hermes/skills/*/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
