[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linta"
version = "0.3.6"
description = "Deterministic scaffolding and CLI helpers for Linta Markdown knowledge bases."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "PolyForm-Noncommercial-1.0.0" }
authors = [
  { name = "Linta contributors" }
]
keywords = ["llm", "knowledge-base", "markdown", "wiki", "agents"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Documentation",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "rich>=13.0",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
linta = "linta.cli:app"
llm-wiki = "linta.cli:deprecated_main"

[project.urls]
Homepage = "https://github.com/resment/Linta"
Repository = "https://github.com/resment/Linta"
Issues = "https://github.com/resment/Linta/issues"

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE", "COMMERCIAL.md", "CONTRIBUTING.md"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
linta = ["py.typed", "assets/hermes/skills/*/*.md"]

[tool.setuptools.data-files]
"templates/prompts" = [
  "templates/prompts/confirm_current.md",
  "templates/prompts/entities.md",
  "templates/prompts/export.md",
  "templates/prompts/ingest.md",
  "templates/prompts/lint.md",
  "templates/prompts/mini_kb.md",
  "templates/prompts/query_writeback.md",
  "templates/prompts/tag.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
